random quote generate feature added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </select>
       <button id="prevBtn">Previous</button>
       <button id="nextBtn">Next</button>
+      <button id="randomBtn">Random</button>
     </div>
   </body>
 </html>
