--- a/index.html
+++ b/index.html
@@ -8,22 +8,30 @@
     <script defer src="./script.js"></script>
   </head>
   <body>
-    <div>
-        <button id="modeToggle">White Mode</button>
-    </div>
-    <div>
-      <p id="quoteDisplay">
-      </p>
-      <button id="increaseFontBtn">Increase Font Size</button>
-      <button id="decreaseFontBtn">Decrease Font Size</button>
-      <select id="categorySelect">
-        <option value="Science">Science</option>
-        <option value="Faith">Faith</option>
-        <option value="Life">Life</option>
-      </select>
-      <button id="prevBtn">Previous</button>
-      <button id="nextBtn">Next</button>
-      <button id="randomBtn">Random</button>
-    </div>
+<div id="mainBody">
+  <div>
+    <button id="modeToggle">White Mode</button>
+</div>
+<div id="fontChange">
+  <button id="increaseFontBtn">Increase Font Size</button>
+  <button id="decreaseFontBtn">Decrease Font Size</button>
+</div>
+<div>
+  <p id="quoteDisplay">
+  </p>
+
+  <select id="categorySelect">
+    <option value="Science">Science</option>
+    <option value="Faith">Faith</option>
+    <option value="Life">Life</option>
+  </select>
+<div id="changeQuote">
+  <button id="prevBtn">Previous</button>
+  <button id="randomBtn">Random</button>
+  <button id="nextBtn">Next</button>
+
+</div>
+</div>
+</div>
   </body>
 </html>
